--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     
 </head>
 <body>
+
+    
 <!--- Introduction Page-->
 <section id="intro">
-    <div class=" container px-4 py-5 my-5 text-center"> <img class="d-block mx-auto mb-5" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> <h1 class="display-5 fw-bold text-body-emphasis">Hello! My name is Sambi</h1> <div class="col-lg-6 mx-auto"> <p class="lead mt-5 mb-5">Hello, nice to meet you! My name is Sambi Singh, I am currently studying computer science and aspire to be a professional software engineer. I enjoy drawing people and animals, reading mystery novels, and going on outdoor walks with my precious  dog , Snoopy. </p> <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Github</button> <button type="button" class="btn btn-outline-secondary btn-lg px-4">Linkedln</button> </div> </div> </div>
+    <header class=" d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true"><use xlink:href="#bootstrap"></use></svg> <span class="fs-4"></span> </a> <ul class="nav nav-pills"><li class="nav-item"><a href="#" class="nav-link">About me</a></li> <li class="nav-item"><a href="#" class="nav-link">Skills/Education</a></li> <li class="nav-item"><a href="#" class="nav-link">Experience</a></li> <li class="nav-item"><a href="#" class="nav-link">Projects</a></li> </ul> </header>
+    <div class=" container px-4 py-5 my-5 text-center"> <img class="d-block mx-auto mb-5 imgStyle" src="/images/profile_pic.jpeg" alt="young man with black hair and glasses smiling" width="300" height="400"> <h1 class="display-5 fw-bold text-body-emphasis">Hello! My name is Sambi</h1> <div class="col-lg-6 mx-auto"> <p class="lead mt-5 mb-5">Hello, nice to meet you! My name is Sambi Singh, I am currently studying computer science and aspire to be a professional software engineer. I enjoy drawing people and animals, reading mystery novels, and going on outdoor walks with my precious  dog , Snoopy. </p> <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Github</button> <button type="button" class="btn btn-outline-secondary btn-lg px-4">Linkedln</button> </div> </div> </div>
 
 </section>
 
