--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section id="Skills">
     <div class="container">
-        <div class="mt-0 p-5 text-center "> <div class="container py-5"> <h1 class="text-body-emphasis">I am a student, but I have picked up the followings skills over the years</h1> <p class="col-lg-8 mx-auto lead">
+        <div class="mt-0 p-5 text-center "> <div class="container py-3"> <h1 class="text-body-emphasis">I am a student, but I have picked up the followings skills over the years</h1> <p class="col-lg-8 mx-auto lead">
             </div> </div>
             <div class="row mb-1 text-center"> <div class="col-md-4 themed-grid-col"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-javascript" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zM9.053 7.596v3.127l-.007 1.752q0 .498-.186.752t-.556.263q-.342 0-.528-.234-.185-.234-.185-.684v-.175H6.37v.185q0 .665.253 1.113.255.45.703.674.44.225 1.016.225.88 0 1.406-.498.527-.498.527-1.485l.007-1.752V7.596zm3.808-.108q-.585 0-1.006.244a1.67 1.67 0 0 0-.634.674 2.1 2.1 0 0 0-.225.996q0 .753.293 1.182.303.42.967.732l.469.215q.438.186.625.43.185.244.185.635 0 .478-.166.703-.156.224-.527.224-.361.001-.547-.244-.186-.243-.205-.752h-1.162q.02.996.498 1.524.479.527 1.386.527.909 0 1.417-.518.507-.517.507-1.484 0-.81-.332-1.289t-1.045-.79l-.449-.196q-.39-.166-.556-.381-.166-.214-.166-.576 0-.4.165-.596.177-.195.508-.195.361 0 .508.234.156.234.176.703h1.123q-.03-.976-.498-1.484-.47-.518-1.309-.518"/>
@@ -36,8 +36,42 @@
 </section>
 
 <section id="Projects">
-    <div class="pricing-header p-3 pb-md-4 mx-auto text-center"> <h1 class="display-4 fw-normal text-body-emphasis">Projects</h1> <p class="fs-5 text-body-secondary">A combination of personal and school projects I built and tested using various coding languages</p> </div>
-
+    <div class="container ">
+    <div class="pricing-header my-5 p-3  mx-auto text-center "> <h1 class="display-4 fw-normal text-body-emphasis">Projects</h1> <p class="fs-5 text-body-secondary">A combination of personal and school projects I built and tested using various coding languages</p> </div>
+    <div class="card mb-3 w-50 h-50">
+      <div class="card mb-3 "></div>
+        <img src="/images/TinDog.jpg" class="card-img-top" alt="image of tindog website header">
+        <div class="card-body">
+          <h5 class="card-title">TinDog</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card mb-3 w-50 h-50">
+        <img src="/images/randomWalk.jpg" class="card-img-top" alt="image of tindog website header">
+        <div class="card-body">
+          <h5 class="card-title">Random Walk</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card mb-3 w-50 h-50">
+        <img src="/images/fnfimage.png" class="card-img-top" alt="image of tindog website header">
+        <div class="card-body">
+          <h5 class="card-title">FriendNFlix</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    
+    </div>
 </section>
+
+<section id="footer">
+  <div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> <p class="col-md-4 mb-0 text-body-secondary">© Sambi Singh</p> <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap"> <svg class="bi me-2" width="40" height="32" aria-hidden="true"><use xlink:href="#bootstrap"></use></svg> </a> <ul class="nav col-md-4 justify-content-end"> <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Me</a></li> <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Education/Skills</a></li> <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Projects</a></li> <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li> <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Projects</a></li> </ul> </footer>
+</div>
+</section>
+
 </body>
 </html>
