FINALLY FINISHED CAPSTONE PORTFOLIO WEB PAGE

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="#intro" class="nav-link active" aria-current="page"
+            <a href="#intro" class="nav-link " aria-current="page"
               >About Me</a
             >
           </li>
           <li class="nav-item">
             <a href="#Experience" class="nav-link">Education/Skills</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+          <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
         </ul>
       </header>
       <div class="container holographic-containerpx-4 py-5 my-0 text-center">
@@ -253,37 +253,45 @@
       </div>
     </section>
 
-    <section id="Projects"></section>
-
-    <div class="container pt-2 mt-5 mb-5">
-      <h2 class="pb-2 border-bottom">The Projects I have built</h2>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <section id="Projects">
+      <div class="container pt-2 mt-5 mb-5">
+        <h2 class="pb-2 border-bottom">The Projects I have built</h2>
+        <div class="row">
+          <div class="col-sm-6 mb-3">
+            <div class="card h-100">
+              <img src="/images/TinDog.jpg"  class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">TinDog</h5>
+                <p class="card-text">A paradoy dating app based of Tinder, but instead about dogs instead humans</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 mb-3">
+            <div class="card h-100">
+              <img src="/images/randomWalk.jpg"  class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Random Walk</h5>
+                <p class="card-text"> A python data visualization using Pandas, help users understand their walking patterns</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 mb-3">
+            <div class="card h-100">
+              <img src="/images/fnfimage.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">FriendNFlix</h5>
+                <p class="card-text"> A movie sharing app built using the flutter framework and dart programming language. Meant to make movie reviewing a socialable experience </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
+    
+    <section id="footer">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> <div class="col-md-4 d-flex align-items-center"> <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> <svg class="bi" width="30" height="24" aria-hidden="true"><use xlink:href="#bootstrap"></use></svg> </a> <span class="mb-3 mb-md-0 text-body-secondary">© Sambi Singh, Inc</span> </div> <ul class="nav col-md-4 justify-content-end list-unstyled d-flex"> <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Instagram"><svg class="bi" width="24" height="24" aria-hidden="true"><use xlink:href="#instagram"></use></svg></a></li> <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li> </ul> </footer>
+    </section>
 
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <section id="footer"></section>
+    
   </body>
 </html>
