fixed path issue with images on github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="container holographic-containerpx-4 py-5 my-0 text-center">
         <img
           class="d-block mx-auto mb-5 imgStyle"
-          src="/images/profile_pic.jpeg"
+          src="images/profile_pic.jpeg"
           alt="young man with black hair and glasses smiling"
           width="300"
           height="400"
@@ -128,7 +128,7 @@
               class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3"
             >
               <img
-                src="/images/deloitteLogo.jpeg"
+                src="images/deloitteLogo.jpeg"
                 class="imgStyle"
                 width="80"
                 height="80"
@@ -150,7 +150,7 @@
             >
               <img
                 class="imgStyle"
-                src="/images/magiKid_logo.jpeg"
+                src="images/magiKid_logo.jpeg"
                 width="80px"
                 height="80px"
               />
@@ -259,7 +259,7 @@
         <div class="row">
           <div class="col-sm-6 mb-3">
             <div class="card h-100">
-              <img src="/images/TinDog.jpg"  class="card-img-top" alt="...">
+              <img src="images/TinDog.jpg"  class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">TinDog</h5>
                 <p class="card-text">A paradoy dating app based of Tinder, but instead about dogs instead humans</p>
@@ -268,7 +268,7 @@
           </div>
           <div class="col-sm-6 mb-3">
             <div class="card h-100">
-              <img src="/images/randomWalk.jpg"  class="card-img-top" alt="...">
+              <img src="images/randomWalk.jpg"  class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Random Walk</h5>
                 <p class="card-text"> A python data visualization using Pandas, help users understand their walking patterns</p>
@@ -277,7 +277,7 @@
           </div>
           <div class="col-sm-6 mb-3">
             <div class="card h-100">
-              <img src="/images/fnfimage.png" class="card-img-top" alt="...">
+              <img src="images/fnfimage.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">FriendNFlix</h5>
                 <p class="card-text"> A movie sharing app built using the flutter framework and dart programming language. Meant to make movie reviewing a socialable experience </p>
