fixed image issue

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3"
             >
               <img
-                src="/images/utdLogo.webp"
+                src="images/utdLogo.webp"
                 class="imgStyle"
                 width="80px"
                 height="80px"
